2003-11-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added marlin.

2003-11-17  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Move monster-masher and hardware-monitor
	to the Fifth Toe.

2003-11-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libwnck has been branched.

2003-11-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched.

2003-11-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-desktop and gnome-session
	have been branched.

2003-11-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2003-11-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gail.

2003-11-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been branched.

2003-11-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnopernicus has been branched.

2003-10-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: glade is back on HEAD.

2003-10-26  Danilo Šegan  <dsegan@gmx.net>

	* status-gnome.xml, translation-status.xml: Updated gedit POT
	filename to 2.6.

2003-10-25  Christian Rose  <menthos@menthos.com>

	* status-gnome.xml, translation-status.xml: Added optimystic.

2003-10-24  Christian Rose  <menthos@menthos.com>

	* status-gnome.xml, translation-status.xml: Added gnome-alsamixer.

2003-10-21  Christian Rose  <menthos@menthos.com>

	* status-gnome.xml, translation-status.xml: procman has been
	branched.

2003-10-21  Christian Rose  <menthos@menthos.com>

	* status-gnome.xml, translation-status.xml: gucharmap has been
	branched.

2003-10-20  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml: More migration taks. This work is booooring!!!

2003-10-20  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml, translation-status.xml: libgtop has been branched.