@@ -887,20 +887,31 @@
       </component>
     </version>
   </module>
-  <module name="gnome-desktop">
+  <module name="gnome-control-center">
     <version release="gnome-2.4">
-      <component name="gnome-desktop" dir="gnome-desktop" group="desktop">
+      <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
         <podir dir="po"/>
-        <potname name="gnome-desktop-2.0.pot"/>
+        <potname name="control-center-2.0.pot"/>
         <branch name="gnome-2-4"/>
         <regenerate/>
         <download/>
       </component>
     </version>
     <version release="gnome-2.6">
-      <component name="gnome-desktop" dir="gnome-desktop" group="desktop">
+      <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
         <podir dir="po"/>
-        <potname name="gnome-desktop-2.0.pot"/>
+        <potname name="control-center-2.0.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
+  <module name="gnome-cups-manager">
+    <version release="gnome-2.6">
+      <component name="gnome-cups-manager" dir="gnome-cups-manager" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-cups-manager.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
