@@ -1,3 +1,7 @@
+2003-11-24  Danilo Šegan  <dsegan@gmx.net>
+
+	* translation-status.xml: Added gnome-cups-manager to extras.
+
 2003-11-20  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added marlin.
